[project]
name = "ai-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "huggingface-hub>=1.4.1",
    "llama-cpp-python>=0.3.16",
    "pillow>=12.1.0",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
